# caffeVSgie_feat_extraction

./: CMakeLists.txt  CMakeLists_caffe.txt  CMakeLists_gie.txt  CaffeFeatExtractor.hpp  GIEFeatExtractor.cpp  README.md  main.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main_GIE.cpp  main_GIEvsCaffe.cpp  main_caffe.cpp  main_multiplefeats.cpp  main_multiplefeats_nocuda.cpp  main_prova.cpp
networks/: VGG_ILSVRC_19_layers_train_val_imagedatalayer.prototxt  bvlc_reference_caffenet_val.prototxt  bvlc_reference_caffenet_val_cutfc6.prototxt  bvlc_reference_caffenet_val_cutfc7.prototxt  googlenet_train_val_imagedatalayer.prototxt  imagenet_val.prototxt  imagenet_val_new.prototxt
registries/: images2.txt  prova.txt  prova.txt~
